test_suite/tests/ui/expected-string/integer.stderr
error: expected serde rename attribute to be a string: `rename = "..."`
 --> tests/ui/expected-string/integer.rs:5:22
  |
5 |     #[serde(rename = 100)]
  |                      ^^^
